[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/wind.gd" type="Script" id=1]
[ext_resource path="res://images/wind.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource_name = "wind"
length = 4.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("wind:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 434.671, -12.6017 ), Vector2( -455.329, -12.6017 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wind3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 194.671, 27.3983 ), Vector2( -695.329, 27.3983 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "wind"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("wind2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 324.671, 7.39831 ), Vector2( -565.329, 7.39831 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "show"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 331.254, 24.3195 )

[node name="wind" type="Node2D"]

modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="wind" type="Sprite" parent="." index="0"]

editor/display_folded = true
position = Vector2( 434.671, -12.6017 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="wind2" type="Sprite" parent="wind" index="0"]

position = Vector2( 890, 0 )
texture = ExtResource( 2 )

[node name="wind2" type="Sprite" parent="." index="1"]

editor/display_folded = true
position = Vector2( 324.671, 7.39831 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="wind2" type="Sprite" parent="wind2" index="0"]

position = Vector2( 890, 0 )
texture = ExtResource( 2 )

[node name="wind3" type="Sprite" parent="." index="2"]

editor/display_folded = true
position = Vector2( 194.671, 27.3983 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="wind2" type="Sprite" parent="wind3" index="0"]

position = Vector2( 890, 0 )
texture = ExtResource( 2 )

[node name="animation" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/wind = SubResource( 1 )
blend_times = [  ]

[node name="slow_animation" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/wind = SubResource( 2 )
blend_times = [  ]

[node name="alpha_animation" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/show = SubResource( 3 )
blend_times = [  ]

[node name="collision_area" type="Area2D" parent="." index="6"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_area" index="0"]

position = Vector2( 319.642, 6.91534 )
shape = SubResource( 4 )

[connection signal="body_entered" from="collision_area" to="." method="_on_collision_area_body_entered"]

[connection signal="body_exited" from="collision_area" to="." method="_on_collision_area_body_exited"]


